IDLE Windows/codigo python operadores ternarios.txt
Operadores ternarios
1º expressao esta_chuvendo=true
2º molhadas 
3º secas

>>> esta_cuvendo= True
>>> print('Hoje estou com as roupas' + ('secas.','molhadas.')[esta_chuvendo])
Traceback (most recent call last):
  File "<pyshell#245>", line 1, in <module>
    print('Hoje estou com as roupas' + ('secas.','molhadas.')[esta_chuvendo])
NameError: name 'esta_chuvendo' is not defined
>>> esta_chuvendo=True
>>> print('Hoje estou com as roupas' + ('secas.','molhadas.')[esta_chuvendo])
Hoje estou com as roupasmolhadas.
>>> print('Hoje estou com as roupas ' + ('secas.','molhadas.')[esta_chuvendo])
Hoje estou com as roupas molhadas.
>>> print('Hoje estou com as roupas' + ('molhadas.' if
				    esta_chuvendo else'secas.')

      
KeyboardInterrupt
>>>  print('Hoje estou com as roupas ' + ('molhadas.' if esta_chuvendo else 'secas.'))
 
  File "<pyshell#253>", line 1
    print('Hoje estou com as roupas ' + ('molhadas.' if esta_chuvendo else 'secas.'))
   ^
IndentationError: unexpected indent
>>> print('Hoje estou com as roupas ' + ('molhadas.' if esta_chuvendo else 'secas.'))
Hoje estou com as roupas molhadas.